docs: reword access api positioning around infrastructure complexity

--- a/api-reference/access/managed.mdx
+++ b/api-reference/access/managed.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Managed Access Endpoints"
-description: "Typed, stable endpoints for common OnlyFans resources"
+description: "Typed endpoints for common OnlyFans operations with signing and session management handled"
 ---
 
-Managed endpoints provide a stable, typed interface for interacting with OnlyFans data. Unlike proxy endpoints, these routes validate input parameters, normalize responses, and handle common logic like pagination.
+Managed endpoints provide a typed interface for common OnlyFans operations. Unlike proxy endpoints, these routes validate input parameters, normalize responses, and handle common logic like pagination. Request signing, proxy routing, and session management are handled automatically.
 
 ## Authentication
 
