--- a/api-reference/access/overview.mdx
+++ b/api-reference/access/overview.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Access API"
 sidebarTitle: "Overview"
-description: "Proxied access to OnlyFans data with automatic session management"
+description: "Make OnlyFans API requests without building signing, proxy, or session infrastructure"
 ---
 
-The Access API provides managed endpoints for common operations and proxy endpoints for any OnlyFans API path. OFAuth handles request signing, session management, and retries automatically.
+The Access API provides managed endpoints for common operations and proxy endpoints for any OnlyFans API path. OFAuth handles request signing, proxy routing, and session management so you don't have to build that infrastructure yourself.
 
 <Card title="Access Guide" icon="book" href="/api-reference/access/overview">
   Complete guide with authentication, endpoints, media proxy, rate limiting, and troubleshooting
