--- a/api-reference/access/proxy.mdx
+++ b/api-reference/access/proxy.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Any OnlyFans API Request'
-description: 'The Access API acts as a transparent proxy to OnlyFans, allowing you to make any OnlyFans API request while OFAuth handles authentication, session management, and proxy optimization automatically. The request and response format depends entirely on the underlying OnlyFans API endpoint being accessed.'
+description: 'Make any OnlyFans API request through the Access proxy. OFAuth handles request signing, proxy routing, and session management. The request and response format depends on the underlying OnlyFans API endpoint.'
 ---
 
 **Base URL:** `https://api.ofauth.com/v2/access/proxy`
