--- a/api-reference/access/proxy.mdx
+++ b/api-reference/access/proxy.mdx
@@ -100,16 +100,18 @@ const response = await fetch('https://api.ofauth.com/v2/access/proxy/chats/123/m
 
 ```json Session Expired (Connection ID)
 {
-  "error": "Connection is expired",
+  "error": "Connection expired",
   "type": "SESSION_EXPIRED", 
-  "action_required": "refresh_session"
+  "actionRequired": "relink_connection",
+  "requestId": "req_abc123"
 }
 ```
 
 ```json Invalid Connection
 {
-  "error": "Invalid connection id",
-  "type": "SESSION_NOT_PROVIDED"
+  "error": "Connection not found",
+  "type": "SESSION_NOT_PROVIDED",
+  "requestId": "req_abc123"
 }
 ```
 
